src/styles/pages/_pin-details.scss
.pin-details-dark {
  background: rgba($cr-black, .9);
  color: $cr-gray-light;
  margin: -1rem -2rem 0;
  padding: 2rem;

  hr,
  .border-top,
  .border-bottom,
  .border-ends,
  .border-sides {
    border-color: rgba(darken($cr-gray-lighter, 10), .4);
  }

  &.person,
  &.host_plain {
    height: 100vh;
    margin-bottom: -1rem;
  }
}

.gathering-description {
  padding-top: 1rem;
}

participant-card {
  .media {
    .media-img-wrapper {
      width: auto;
    }
  }
}

.pending-requests {
  margin-left: 97px;
  margin-top: -1.5rem;
}

